<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskOrganizer</string>
    <string name="tasks_label">Tasks:</string>
    <string name="action_settings">Settings</string>
    
    <string name="pref_user_name">User Name</string>
    <string name="pref_user_pass">Password</string>
    <string name="pref_poll_interval">Update frequency</string>
    <string name="pref_alarm_tone">Alarm Ringtone</string>
    
    <string name="action_refresh">Refresh</string>
    <string name="action_new_task">New Task</string>
    <string name="action_new_alert">New Alert</string>
    <string name="action_delete_task">Delete Task</string>
    <string name="action_delete_alert">Delete Alert</string>
    

    <string-array name="interval_arrays">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="refresh_intervals">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="refreshInterval">
        <item name="1">Every 1 Minute</item>
        <item name="5">Every 5 Minutes</item>
        <item name="15">Every 15 Minutes</item>
        <item name="30">Every 30 Minutes</item>
        <item name="60">Every Hour</item>
    </string-array>
    <string-array name="refreshIntervalValues">
		<item name="1">1</item>        
        <item name="5">5</item>
        <item name="15">15</item>
        <item name="30">30</item>
        <item name="60">60</item>
    </string-array>

    <string name="title_activity_test">TestActivity</string>

</resources>
