<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taskorganizer.MainActivity" > 

    <item android:id="@+id/action_new_task"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new_task"
          android:showAsAction="always" 
          yourapp:showAsAction="always"/>    
    
	<item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="always" 
          yourapp:showAsAction="always"/>    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom"
        yourapp:showAsAction="ifRoom"/>
    
    
</menu>